--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -27,8 +27,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "manhochan30@gmail.com"
-          git config --local user.name "manho30"
+          git config --local user.email "devashish902@gmail.com"
+          git config --local user.name "babayaga6969007"
           git add -A
           
           
